--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -2,7 +2,7 @@
 # https://github.com/dusty-nv/jetson-containers/blob/master/Dockerfile.ros.foxy
 # https://github.com/codustry/jetson-containers/blob/master/Dockerfile.ros.foxy
 
-FROM lomori/foxy-ros-base-l4t-r32.6.1
+FROM amdozab/xaviernx:foxy-ros-base-l4t-r32.6.1
 
 #
 # ZED Jet
