--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -2,7 +2,9 @@
 # https://github.com/dusty-nv/jetson-containers/blob/master/Dockerfile.ros.foxy
 # https://github.com/codustry/jetson-containers/blob/master/Dockerfile.ros.foxy
 
-FROM amdozab/xaviernx:foxy-ros-base-l4t-r32.6.1
+#FROM amdozab/xaviernx:foxy-ros-base-l4t-r32.6.1
+ARG L4T_MINOR_VERSION=6.1
+FROM dustynv/ros:foxy-ros-base-l4t-r32.${L4T_MINOR_VERSION}
 
 #
 # ZED Jet
